--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
